# claude-voice

./: ARCHITECTURE.md  LICENSE  README.md  package.json  pyproject.toml
.claude-plugin/: plugin.json
lazy_claude/: __init__.py  __main__.py  aec.py  audio.py  av_audio.py  server.py  stdout_guard.py  stt.py  tts.py  wakeword.py
scripts/: test_aec_manual.py  test_macos_aec.py
skills/agent-voice/: SKILL.md
tests/: test_aec.py  test_audio.py  test_av_audio.py  test_bridge.py  test_bridge_claude.py  test_bridge_tts.py  test_bridge_vad.py  test_phase2_aec_integration.py  test_phase3_e2e.py  test_server.py  test_server_macos.py  test_stdout_guard.py  test_stt.py  test_tts.py  test_wakeword.py
