[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lazy-claude"
version = "0.1.0"
description = "Voice MCP server for Claude Code"
requires-python = ">=3.12"
dependencies = [
    "kokoro>=0.9,<1",
    "soundfile>=0.12",
    "pywhispercpp>=1,<2",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "onnxruntime>=1.18",
    "mcp[cli]>=1.26,<2",
    "pytest>=9.0.2",
]

[project.scripts]
lazy-claude = "lazy_claude.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["lazy_claude"]

[tool.pytest.ini_options]
testpaths = ["tests"]
